// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioVideo with Audio data amp - should render audio clip UK only 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d3c",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": true,
                  "format": "audio",
                  "id": "p01m7d3c",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d3c.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is some sound from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham Checkout 2",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d3h",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d3c.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data amp - should render audio clip global with guidance 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d07",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": false,
                  "format": "audio",
                  "id": "p01m7d07",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d07.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "Some audio from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham checkout",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d09",
                      "warnings": Object {
                        "long": "Contains some strong language.",
                        "short": "Contains some strong language.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d07.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data amp - should render audio clip non-UK only 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d4m",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio",
                  "id": "p01m7d4m",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d4m.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is some audio from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham Checkout 3",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d4p",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d4m.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data amp - should render audio episode global 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01mbrvl",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": false,
                  "format": "audio",
                  "id": "p01mbrvl",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/episode/p01mbrvl.jpg",
                  "subType": "episode",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is a test asset created for the articles project",
                  },
                  "title": "Test audio episode for articles, worldwide",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01mbrx4",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/episode/p01mbrvl.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data canonical - should render audio clip UK only 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d3c",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": true,
                  "format": "audio",
                  "id": "p01m7d3c",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d3c.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is some sound from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham Checkout 2",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d3h",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d3c.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data canonical - should render audio clip global with guidance 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d07",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": false,
                  "format": "audio",
                  "id": "p01m7d07",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d07.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "Some audio from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham checkout",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d09",
                      "warnings": Object {
                        "long": "Contains some strong language.",
                        "short": "Contains some strong language.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d07.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data canonical - should render audio clip non-UK only 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7d4m",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio",
                  "id": "p01m7d4m",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d4m.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is some audio from a supermarket checkout in Birmingham",
                  },
                  "title": "Birmingham Checkout 3",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01m7d4p",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/clip/p01m7d4m.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Audio data canonical - should render audio episode global 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01mbrvl",
                "model": Object {
                  "advertising": false,
                  "caption": null,
                  "embedding": false,
                  "format": "audio",
                  "id": "p01mbrvl",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/episode/p01mbrvl.jpg",
                  "subType": "episode",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is a test asset created for the articles project",
                  },
                  "title": "Test audio episode for articles, worldwide",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 127,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01mbrx4",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/legacy/episode/p01mbrvl.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data amp - should render portrait video with global visibility 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7hmc",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01m7hmc",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01m7hny.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is a really plain green test vertical video",
                  },
                  "title": "Test vertical video",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 11,
                      "types": Array [
                        "Portrait",
                      ],
                      "versionId": "p01m7hmf",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01m7hny.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data amp - should render the video without a caption 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01k6msm",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01k6msm",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "They may be tiny, but us humans could learn a thing or two from ants.",
                  },
                  "title": "Five things ants can teach us about management",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 191,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01k6msp",
                      "warnings": Object {
                        "long": "Contains strong language and adult humour.",
                        "short": "Contains strong language and adult humour.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Ants",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Ants",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data amp - should render the video without a caption 2`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01kdbns",
                "model": Object {
                  "advertising": true,
                  "caption": "How do Germans remember the World Wars?",
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01kdbns",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbpk.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "long": "Can people in today's Germany mourn their dead without whitewashing their country's past? We ask three Germans, ahead of the 100th anniversary of the end of World War One.",
                    "medium": "Can people in today's Germany mourn their dead without whitewashing their country's past?",
                    "short": "Remembrance Day: How Germans remember the World Wars",
                  },
                  "title": "How Germans remember the World Wars",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 162,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01kdbnv",
                      "warnings": Object {
                        "long": "Contains some strong language.",
                        "short": "Contains some strong language.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbpk.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Description of picture (ALT TEXT)",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Description of picture (ALT TEXT)",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data amp - should render the video without a caption 3`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01kdbpz",
                "model": Object {
                  "advertising": true,
                  "caption": "Stephen Richardson had to have his leg amputated because of type 2 diabetes",
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01kdbpz",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbs1.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "long": "Every week 170 people in the UK lose a limb because of diabetes. 
Around four million people in the UK are living with diabetes - and around 90% of them have type 2 diabetes, which is often linked to being overweight or inactive. 
Diabetes prescriptions are costing the NHS in England more than £1 billion a year, according to figures from NHS Digital.
And a further 12 million people could be at risk of getting type 2 diabetes in the future.
Stephen Richardson has told the BBC he blames himself for the loss of his limb.",
                    "medium": "Stephen Richardson admits he ignored advice about diet and exercise.",
                    "short": "Diabetes type 2: 'I blame myself for the loss of my leg'",
                  },
                  "title": "'I lost my leg to type 2 diabetes' (NON UK)",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 122,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01kdbq2",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbs1.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data and a caption amp - should render the video and caption 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "amp",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01k6msm",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01k6msm",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "They may be tiny, but us humans could learn a thing or two from ants.",
                  },
                  "title": "Five things ants can teach us about management",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 191,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01k6msp",
                      "warnings": Object {
                        "long": "Contains strong language and adult humour.",
                        "short": "Contains strong language and adult humour.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Ants",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Ants",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "p01k6msm: Video, Clip, UK and non-UK, guidance, subtitles (about bees)",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "p01k6msm: Video, Clip, UK and non-UK, guidance, subtitles (about bees)",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "caption",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data and a caption canonical - should render the video and caption 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01k6msm",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01k6msm",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "They may be tiny, but us humans could learn a thing or two from ants.",
                  },
                  "title": "Five things ants can teach us about management",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 191,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01k6msp",
                      "warnings": Object {
                        "long": "Contains strong language and adult humour.",
                        "short": "Contains strong language and adult humour.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Ants",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Ants",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "attributes": Array [],
                              "text": "p01k6msm: Video, Clip, UK and non-UK, guidance, subtitles (about bees)",
                            },
                            "type": "fragment",
                          },
                        ],
                        "text": "p01k6msm: Video, Clip, UK and non-UK, guidance, subtitles (about bees)",
                      },
                      "type": "paragraph",
                    },
                  ],
                },
                "type": "text",
              },
            ],
          },
          "type": "caption",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data canonical - should render portrait video with global visibility 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01m7hmc",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01m7hmc",
                  "image": null,
                  "imageCopyright": null,
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01m7hny.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "This is a really plain green test vertical video",
                  },
                  "title": "Test vertical video",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 11,
                      "types": Array [
                        "Portrait",
                      ],
                      "versionId": "p01m7hmf",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": null,
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01m7hny.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data canonical - should render the video without a caption 1`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01k6msm",
                "model": Object {
                  "advertising": true,
                  "caption": null,
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01k6msm",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "short": "They may be tiny, but us humans could learn a thing or two from ants.",
                  },
                  "title": "Five things ants can teach us about management",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 191,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01k6msp",
                      "warnings": Object {
                        "long": "Contains strong language and adult humour.",
                        "short": "Contains strong language and adult humour.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01k6mtv.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Ants",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Ants",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data canonical - should render the video without a caption 2`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01kdbns",
                "model": Object {
                  "advertising": true,
                  "caption": "How do Germans remember the World Wars?",
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01kdbns",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbpk.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "long": "Can people in today's Germany mourn their dead without whitewashing their country's past? We ask three Germans, ahead of the 100th anniversary of the end of World War One.",
                    "medium": "Can people in today's Germany mourn their dead without whitewashing their country's past?",
                    "short": "Remembrance Day: How Germans remember the World Wars",
                  },
                  "title": "How Germans remember the World Wars",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": false,
                        "uk": true,
                      },
                      "availableUntil": null,
                      "duration": 162,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01kdbnv",
                      "warnings": Object {
                        "long": "Contains some strong language.",
                        "short": "Contains some strong language.",
                      },
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": 1080,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbpk.jpg",
                        "originCode": null,
                        "width": 1920,
                      },
                      "type": "rawImage",
                    },
                    Object {
                      "model": Object {
                        "blocks": Array [
                          Object {
                            "model": Object {
                              "blocks": Array [
                                Object {
                                  "model": Object {
                                    "blocks": Array [
                                      Object {
                                        "model": Object {
                                          "attributes": Array [],
                                          "text": "Description of picture (ALT TEXT)",
                                        },
                                        "type": "fragment",
                                      },
                                    ],
                                    "text": "Description of picture (ALT TEXT)",
                                  },
                                  "type": "paragraph",
                                },
                              ],
                            },
                            "type": "text",
                          },
                        ],
                      },
                      "type": "altText",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`AudioVideo with Video data canonical - should render the video without a caption 3`] = `
<Context.Provider
  value={
    Object {
      "id": "c0000000000o",
      "isUK": true,
      "origin": "https://www.test.bbc.co.uk",
      "pageType": "article",
      "platform": "canonical",
      "statsDestination": "NEWS_PS_TEST",
      "statsPageIdentifier": "news.articles.c0000000000o.page",
    }
  }
>
  <VideoContainer
    blocks={
      Array [
        Object {
          "model": Object {
            "blocks": Array [
              Object {
                "blockId": "urn:bbc:ares::clip:p01kdbpz",
                "model": Object {
                  "advertising": true,
                  "caption": "Stephen Richardson had to have his leg amputated because of type 2 diabetes",
                  "embedding": true,
                  "format": "audio_video",
                  "id": "p01kdbpz",
                  "image": null,
                  "imageCopyright": "BBC",
                  "imageUrl": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbs1.jpg",
                  "subType": "clip",
                  "syndication": Object {
                    "destinations": Array [],
                  },
                  "synopses": Object {
                    "long": "Every week 170 people in the UK lose a limb because of diabetes. 
Around four million people in the UK are living with diabetes - and around 90% of them have type 2 diabetes, which is often linked to being overweight or inactive. 
Diabetes prescriptions are costing the NHS in England more than £1 billion a year, according to figures from NHS Digital.
And a further 12 million people could be at risk of getting type 2 diabetes in the future.
Stephen Richardson has told the BBC he blames himself for the loss of his limb.",
                    "medium": "Stephen Richardson admits he ignored advice about diet and exercise.",
                    "short": "Diabetes type 2: 'I blame myself for the loss of my leg'",
                  },
                  "title": "'I lost my leg to type 2 diabetes' (NON UK)",
                  "versions": Array [
                    Object {
                      "availableFrom": null,
                      "availableTerritories": Object {
                        "nonUk": true,
                        "uk": false,
                      },
                      "availableUntil": null,
                      "duration": 122,
                      "types": Array [
                        "Original",
                      ],
                      "versionId": "p01kdbq2",
                      "warnings": Object {},
                    },
                  ],
                },
                "type": "aresMediaMetadata",
              },
              Object {
                "model": Object {
                  "blocks": Array [
                    Object {
                      "model": Object {
                        "copyrightHolder": "BBC",
                        "height": null,
                        "locator": "ichef.test.bbci.co.uk/images/ic/$recipe/p01kdbs1.jpg",
                        "originCode": null,
                        "width": null,
                      },
                      "type": "rawImage",
                    },
                  ],
                },
                "type": "image",
              },
            ],
          },
          "type": "aresMedia",
        },
      ]
    }
  />
</Context.Provider>
`;
